tests/NormalTests/paczka2/big_fuzzy/18365022.err
Error in line 5: A6kb 541 28,6
Error in line 1: WiW9 S541 26,6
Error in line 7: Lb3APjJ S541 2,1
Error in line 2: 2FSOr S541 94,9
Error in line 8: Lb3APjJ A942 99,2
Error in line 6: WiW9 S162 74,3
Error in line 4: A6kb S162 71,7
Error in line 20: Lb3APjJ A416 94,5
Error in line 33: Lb3APjJ A416 40,3
Error in line 37: Lb3APjJ S541 5,6
Error in line 38: Lb3APjJ A942 13,2
Error in line 34: WiW9 S541 54,6
Error in line 44: S162 S162 69,0
Error in line 36: 1KCjqh3Xu S162 445,5
Error in line 43: eNXl A416 9,6
Error in line 48: 1KCjqh3Xu A942 77,9
Error in line 53: 1KCjqh3Xu S162 93,1
Error in line 57: WiW9 S162 21,5
Error in line 70: 2FSOr A416 53,5
Error in line 77: A6kb A942 i4,4
Error in line 76: A6kb S541 87,2
Error in line 72: 2FSOr S162 51,9
Error in line 82: A6kb A942 129,3
Error in line 83: S162 S541 88,0
Error in line 104: 1KCjqh3Xu S541 35,7
Error in line 114: WiW9 A942 28,3
Error in line 110: 1KCjqh3Xu A416 9,0
Error in line 117: S162 S162 7,9
Error in line 126: WiW9 S162 31,8
Error in line 131: S162 A416 6,34
Error in line 125: S162 A416 2,8
Error in line 146: A6kb S162 99,5
Error in line 155: 1KCjqh3Xu A416 68,1
Error in line 156: 1KCjqh3Xu S541 62,8
Error in line 167: A6kb S541 -1,9
Error in line 165: Lb3APjJ A942 48,8
Error in line 168: Lb3APjJ S541 71,5
Error in line 170: Lb3APjJ S162 93,9
Error in line 143: S162 S541 79,5
Error in line 161: 2FSOr A416 43,9
Error in line 151: eNXl A416 22,2
Error in line 179: 2FSOr S162 45,2
Error in line 189: 1KCjqh3Xu A942 87,1
Error in line 188: S162 A942 80,5
Error in line 202: S162 A942 -4,4
Error in line 200: S162 A942 72,8
Error in line 196: WiW9 S162 150,0
Error in line 208: S162 S162 5,2
Error in line 207: Lb3APjJ S162 87,6
Error in line 212: S162 A942 88,2
Error in line 235: eNXl A416 66,4
Error in line 222: 1KCjqh3Xu S162 23,6
